Fixed opening advanced section of profile editor on Firefox

--- a/octoprint_m3dfio/static/css/m3dfio.css
+++ b/octoprint_m3dfio/static/css/m3dfio.css
@@ -153,6 +153,10 @@
 	clear: left;
 }
 
+#control div.jog-panel.filament button {
+	width: 125px;
+}
+
 #control div.jog-panel.calibration button {
 	width: 180px;
 	float: left;
